--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,20 +3,20 @@ project:
   output-dir: docs
   
 website:
-  title: "MY WEB SITE"
+  title: "Madison Hess' Personal Webpage"
   navbar:
     left:
       - href: index.qmd
         text: Home
       - projects.qmd
     tools:
-      - icon: twitter
-        href: https://twitter.com/
+      - icon: linkedin
+        href: https://www.linkedin.com/in/madisonrhess/
       - icon: github
-        href: https://github.com/YOURUSERNAME/YOURREPO
+        href: https://github.com/madisonhess
   page-footer:
     right: "Built with [Quarto](https://quarto.org/)"
-    left: "&copy; Copyright 2023, YOUR NAME"
+    left: "&copy; Copyright 2023, Madison Hess"
 
 format:
   html:
